--- a/package.json
+++ b/package.json
@@ -36,18 +36,21 @@
         "react-test-renderer": "^15.5.3",
         "react-transform-catch-errors": "^1.0.2",
         "redux-mock-store": "1.2.2",
-        "sinon": "^2.1.0"
+        "sinon": "^2.1.0",
+        "run-script-os": "^1.0.3"
     },
     "engines": {
         "node": ">=6.x"
     },
     "dependencies": {
         "@sendgrid/mail": "^6.1.4",
-        "autoprefixer": "^6.7.7",
+        "autoprefixer": "7.1.6",
         "axios": "^0.16.0",
         "babel-cli": "^6.24.1",
-        "babel-core": "^6.24.1",
-        "babel-loader": "^7.0.0",
+        "babel-core": "6.26.0",
+        "babel-eslint": "7.2.3",
+        "babel-jest": "20.0.3",
+        "babel-loader": "7.1.2",
         "babel-plugin-react-transform": "^2.0.2",
         "babel-plugin-transform-react-constant-elements": "^6.23.0",
         "babel-plugin-transform-react-inline-elements": "^6.22.0",
@@ -55,13 +58,18 @@
         "babel-polyfill": "^6.26.0",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
+        "babel-preset-react-app": "^3.1.1",
         "babel-preset-react-hmre": "^1.1.1",
         "babel-preset-stage-0": "^6.24.1",
+        "babel-runtime": "6.26.0",
         "bcrypt-nodejs": "0.0.3",
+        "bignumber.js": "^7.2.1",
         "bluebird": "^3.5.0",
         "body-parser": "^1.17.1",
         "bootstrap": "^3.3.7",
         "bson": "^1.0.4",
+        "case-sensitive-paths-webpack-plugin": "2.1.1",
+        "chalk": "1.1.3",
         "classnames": "^2.2.3",
         "compression": "^1.6.2",
         "connect-mongo": "^1.3.2",
@@ -69,14 +77,26 @@
         "cookie-parser": "^1.4.3",
         "cors": "^2.8.4",
         "cross-env": "^4.0.0",
-        "css-loader": "^0.28.0",
+        "css-loader": "0.28.7",
+        "dotenv": "4.0.0",
+        "dotenv-expand": "4.2.0",
         "es6-promise": "^4.1.0",
+        "eslint": "4.10.0",
+        "eslint-config-react-app": "^2.1.0",
+        "eslint-loader": "1.9.0",
+        "eslint-plugin-flowtype": "2.39.1",
+        "eslint-plugin-import": "2.8.0",
+        "eslint-plugin-jsx-a11y": "5.1.1",
+        "eslint-plugin-react": "7.4.0",
         "express": "^4.15.2",
         "express-flash": "0.0.2",
         "express-session": "^1.15.2",
-        "extract-text-webpack-plugin": "^2.1.0",
-        "file-loader": "^0.11.1",
+        "extract-text-webpack-plugin": "3.0.2",
+        "file-loader": "1.1.5",
+        "fs-extra": "3.0.1",
         "helmet": "^3.5.0",
+        "html-webpack-plugin": "2.29.0",
+        "jest": "20.0.4",
         "jquery": "^3.2.1",
         "json-loader": "^0.5.4",
         "lodash": "^4.16.2",
@@ -85,21 +105,26 @@
         "mongoose": "^4.9.3",
         "nodemailer": "^4.3.1",
         "nodemailer-sendgrid-transport": "^0.2.0",
+        "object-assign": "4.1.1",
         "passport": "^0.3.2",
         "passport-google-oauth": "^1.0.0",
         "passport-local": "^1.0.0",
         "pg": "^6.1.5",
         "pg-hstore": "^2.3.2",
         "postcss-cssnext": "^2.10.0",
+        "postcss-flexbugs-fixes": "3.2.0",
         "postcss-import": "^9.0.0",
-        "postcss-loader": "^2.0.8",
+        "postcss-loader": "2.0.8",
         "postcss-reporter": "^3.0.0",
+        "promise": "8.0.1",
         "prop-types": "^15.5.4",
-        "react": "^15.5.3",
+        "raf": "3.4.0",
+        "react": "^16.4.2",
         "react-addons-css-transition-group": "^15.6.2",
         "react-addons-test-utils": "^15.5.0",
         "react-bootstrap": "^0.31.3",
-        "react-dom": "^15.5.3",
+        "react-dev-utils": "^5.0.1",
+        "react-dom": "^16.4.2",
         "react-helmet": "^5.0.2",
         "react-redux": "^5.0.3",
         "react-router": "^3.0.3",
@@ -108,15 +133,23 @@
         "redux": "^3.6.0",
         "redux-logger": "^3.0.1",
         "redux-thunk": "^2.0.1",
+        "resolve": "1.6.0",
         "rimraf": "^2.6.1",
         "sequelize": "^3.30.4",
         "sequelize-cli": "^2.7.0",
         "spark-md5": "^3.0.0",
-        "style-loader": "^0.16.1",
-        "url-loader": "^0.5.8",
-        "webpack": "^2.3.3",
+        "style-loader": "0.19.0",
+        "sw-precache-webpack-plugin": "0.11.4",
+        "truffle": "^4.1.14",
+        "truffle-contract": "^4.0.0-next.0",
+        "uglifyjs-webpack-plugin": "^1.3.0",
+        "url-loader": "0.6.2",
+        "web3": "^1.0.0-beta.35",
+        "webpack": "3.8.1",
         "webpack-dev-middleware": "^1.10.1",
+        "webpack-dev-server": "2.9.4",
         "webpack-hot-middleware": "^2.18.0",
-        "webpack-manifest-plugin": "^1.1.0"
+        "webpack-manifest-plugin": "1.3.2",
+        "whatwg-fetch": "2.0.3"
     }
 }
