--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -54,7 +54,9 @@
 		"no-tabs": 0,
 		"import/prefer-default-export": 0,
 		"arrow-parens": 0,
-		"jsx-a11y/img-has-alt": 0
+		"jsx-a11y/img-has-alt": 0,
+		"no-undef": "error",
+		"spaced-comment": 1
 	},
 	"plugins": ["react", "jsx-a11y"],
 	"globals": {
