--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
         "eslint-plugin-import": "2.8.0",
         "eslint-plugin-jsx-a11y": "5.1.1",
         "eslint-plugin-react": "7.4.0",
+        "event-stream": "^4.0.1",
         "express": "^4.15.2",
         "express-flash": "0.0.2",
         "express-session": "^1.15.2",
